syntax = "proto3";

package istio.mixer.adapter.sample.check;

import "mixer/v1/config/descriptor/value_type.proto";
import "mixer/v1/template/extensions.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_CHECK;

message Template {
    string check_expression = 1;
    map<string, string> stringMap = 2;
}
