syntax = "proto3";

package istio.mixer.adapter.sample.report;

import "mixer/v1/config/descriptor/value_type.proto";
import "pkg/adapter/template/TemplateExtensions.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option (istio.mixer.v1.config.template.template_variety) = TEMPLATE_VARIETY_REPORT;

message Template {
    istio.mixer.v1.config.descriptor.ValueType value = 1;
    map<string, istio.mixer.v1.config.descriptor.ValueType> dimensions = 2;

    int64 int64Primitive = 3;

    bool boolPrimitive = 4;

    double doublePrimitive = 5;

    string stringPrimitive = 6;

    map<string, int64> int64Map = 7;

    google.protobuf.Timestamp timeStamp = 9;

    google.protobuf.Duration duration = 10;
}
